--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1",
     "spotify-web-api-node": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.1.0"
   }
 }
